<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Login.SignUpActivity">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"

        android:scaleType="centerCrop"
        app:srcCompat="@drawable/kiddo_logo" />

<TextView
    android:id="@+id/welcome1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/adlam_display"
    android:text="@string/welcome"
    android:textColor="@color/black"
android:textSize="26sp"
android:layout_gravity="center"/>

<TextView
    android:id="@+id/text3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/adlam_display"
    android:text="@string/create_account"
    android:layout_marginBottom="10dp"

    android:textColor="@color/black"
android:textSize="16sp"
android:layout_gravity="center"/>

<LinearLayout
    android:id="@+id/sign_up_bottom_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_layout"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_user_name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
    android:layout_marginBottom="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        android:backgroundTint="@color/purple_200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_name"
            android:background="@color/end_button"
            tools:ignore="VisualLintTextFieldSize" /> <!-- خلفية بيضاء -->
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        android:backgroundTint="@color/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:background="@color/end_button"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
    android:backgroundTint="@color/transparent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/child_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_parent_email"
        android:background="@color/end_button"/>
</com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:backgroundTint="@color/teal_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:background="@color/end_button"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:backgroundTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:background="@color/end_button"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/sign_account_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/end_button"
        android:minHeight="48dp"
        android:spinnerMode="dialog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_splash"
        android:drawableRight="@drawable/arrow"
        android:drawablePadding="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:background="@drawable/button1"
    android:textColor="@color/white"
        tools:ignore="VisualLintButtonSize" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>
</LinearLayout>
    </ScrollView>